src/App.css
.bash-output {
    background-color: #222;
    color: white;
    border: 1px solid black;
    font-family: monospace;
    overflow: auto;
}

.code-editor {
    height: 100%;
    width: 100%;
    overflow: hidden;
}

.monaco {
    height: 100%;
    overflow: hidden;
    max-height: 100%;
}

.flex-container {
    height: 100%;
    display: flex;
    flex-direction: column;
}

.fill-content {
    flex: 1 1 auto;
    overflow: hidden;
}

.full-size {
    height: 100%;
}

.container-fluid {
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
}

.ratio-line {
    color: forestgreen !important;
    font-style: oblique;
    vertical-align: bottom;
    font-size: 90%;
}

.asm-keyword {
    color: blue !important;
}

.asm-title {
    color: red !important;
    font-size: 100%;
}

.line-img {
    height: 1.3em;
}

.modal-90w {
    max-width: 90%;
}

.close-button {
    padding: 0 0 0 5px;
    border: none;
    background: none;
}

.packed-card {
    padding: 0 0 0 0;
}

.linked-code-decoration-inline-0 {
    background: #e3a600 !important;
}

.linked-code-decoration-inline-1 {
    background: #b8b600 !important;
}

.linked-code-decoration-inline-2 {
    background: #75c500 !important;
}

.linked-code-decoration-inline-3 {
    background: #00ca81 !important;
}

.linked-code-decoration-inline-4 {
    background: #00c6b2 !important;
}

.linked-code-decoration-inline-5 {
    background: #00c3d2 !important;
}

.linked-code-decoration-inline-6 {
    background: #13bdff !important;
}

.linked-code-decoration-inline-7 {
    background: #a6a9ff !important;
}

.linked-code-decoration-inline-8 {
    background: #e390ff !important;
}

.linked-code-decoration-inline-9 {
    background: #ff86dc !important;
}

.linked-code-decoration-inline-10 {
    background: #ff8eaf !important;
}

.linked-code-decoration-inline-11 {
    background: #ff9470 !important;
}

.rainbow-decoration {
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-image: -webkit-gradient(linear, left center, right center, color-stop(0.00, red), color-stop(16%, orange), color-stop(32%, yellow), color-stop(48%, green), color-stop(60%, blue), color-stop(76%, indigo), color-stop(1.00, violet));
}

